environments/coolstore-inventory-stage/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  replicas: 1
  strategy: {}
  template:
    spec:
      containers:
      - image: quay.io/adrina/coolstore-inventory:main-1122a86f99b041b2503e202cad1e8eb6f53e6cb6
        imagePullPolicy: Always
        name: inventory
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
