environments/coolstore-inventory-stage/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
status:
  loadBalancer: {}
