environments/coolstore-inventory-stage/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: inventory
  namespace: coolstore-inventory-stage
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
